# autobox

./: CHANGELOG.md  Cargo.toml  README.md
autobox-cli/: Cargo.toml
autobox-cli/src/: main.rs
autobox-effect/: Cargo.toml
autobox-effect-parser/: Cargo.toml
autobox-effect-parser/src/: ast.rs  lib.rs
autobox-effect/src/: lib.rs
example-app/: Cargo.toml
example-app/src/: main.rs
