[package]
name = "autobox-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
syn = { version = "1.0.102", features = ["parsing", "full", "extra-traits", "visit"] }
walkdir = "2.3.2"
autobox-effect-parser = { path = "../autobox-effect-parser" }
